--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Chengyu Luo"
+  name             : "Yiheng Jiang"
   avatar           : "images/lcy.jpg"
   bio              : "Southeast University"
   location         : "Nanjing, China"
